--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+img {
+  width: 150px;
+  height: 140px;
+}
+ul > li {
+  margin: 0 0.45rem;
+}
